symposia faculty light boxes
symposia faculty light boxes

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-17T19:16:25Z</date>
+						<date>2018-07-18T00:28:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -44,11 +44,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								uSoquum6mCty
-								uIn2fhh+hw==
+								syd5ScMzK+Md
+								76SbQPb+5w==
 								</data>
 								<key>Size</key>
-								<integer>571092</integer>
+								<integer>438998</integer>
 							</dict>
 							<key>files/small_109872.jpg</key>
 							<dict>
@@ -84,141 +84,181 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TJTIteeVpu8B
-								kDgQSw7Qbg==
+								c1UCR/sFBLCH
+								zn5n5UJwOA==
 								</data>
 								<key>Size</key>
-								<integer>114465</integer>
+								<integer>114477</integer>
 							</dict>
 							<key>files/stacks-image-049024f-250x250@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								7P1z1BEnSg7o
-								iWPhqpOwrA==
+								hUfRkkISOpi4
+								M81sAcHQ1g==
 								</data>
 								<key>Size</key>
-								<integer>402227</integer>
+								<integer>402239</integer>
 							</dict>
 							<key>files/stacks-image-062a04b-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								y3uCJVawbAUG
-								hvVb5xJ/+g==
+								eQ9Rh52FGIe7
+								UYosePi0aA==
 								</data>
 								<key>Size</key>
-								<integer>89858</integer>
+								<integer>89870</integer>
 							</dict>
 							<key>files/stacks-image-062a04b-250x250@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								nnoTGeJyU3DY
-								/NpzP0H9+w==
+								2B7IB/yHoOnv
+								HElNONFqwA==
 								</data>
 								<key>Size</key>
-								<integer>329408</integer>
+								<integer>329420</integer>
 							</dict>
 							<key>files/stacks-image-2058ce3-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								5/DnWfUoMOzK
-								8gE/OSSR4g==
+								ZRC2NrSeL/9y
+								yjtAupB0iA==
 								</data>
 								<key>Size</key>
-								<integer>47248</integer>
+								<integer>47260</integer>
+							</dict>
+							<key>files/stacks-image-38af08b-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								zgqZvEALTUts
+								d6df1U3bjQ==
+								</data>
+								<key>Size</key>
+								<integer>115798</integer>
 							</dict>
 							<key>files/stacks-image-48ee80b-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								t4zMg+i7qJ90
-								XBx6uNzwKw==
+								7K6PSQh9mROR
+								+7K5Nsj+3w==
 								</data>
 								<key>Size</key>
-								<integer>90786</integer>
+								<integer>90798</integer>
 							</dict>
 							<key>files/stacks-image-48ee80b-250x250@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								PtAxOimLl9Lo
-								lMvCRh8y6Q==
+								6zdIUUehofVi
+								nwpnAVNoCw==
 								</data>
 								<key>Size</key>
-								<integer>338276</integer>
+								<integer>338288</integer>
 							</dict>
 							<key>files/stacks-image-555e842-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								FKOUMiwFTxo4
-								ULh95Iwdiw==
+								Th4ZQ3m162Hz
+								RpEAXGMHWw==
 								</data>
 								<key>Size</key>
-								<integer>90967</integer>
+								<integer>90979</integer>
 							</dict>
 							<key>files/stacks-image-678f5ae-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								HgL7rxRYpTRx
-								LQ70BB3uaw==
+								ljioPaWktQOn
+								OPDlAmg++Q==
 								</data>
 								<key>Size</key>
-								<integer>81050</integer>
+								<integer>81062</integer>
 							</dict>
 							<key>files/stacks-image-799943b-750x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								un1KgQkbBTws
-								YqjTahZY1A==
+								QItmjV1ggL6b
+								efG75dMJdw==
 								</data>
 								<key>Size</key>
-								<integer>29468</integer>
+								<integer>29480</integer>
 							</dict>
 							<key>files/stacks-image-799943b-750x250@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								rWdrgcEIQh+F
-								Cii5oxAItw==
+								QVUhkk6Dt7iw
+								/XqmB3b5AA==
 								</data>
 								<key>Size</key>
-								<integer>76062</integer>
+								<integer>76074</integer>
 							</dict>
 							<key>files/stacks-image-7ceb613-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								nRvrXeYGj4no
-								rrMDLqCP1A==
+								+tv/HsN8D/Dd
+								+mwdKel4Zg==
 								</data>
 								<key>Size</key>
-								<integer>107536</integer>
+								<integer>107548</integer>
 							</dict>
 							<key>files/stacks-image-7ceb613-250x250@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								KWIcBUtHwjvJ
-								Ze24pI995A==
+								KXvmS9DAvlAp
+								SxELDYlXxQ==
 								</data>
 								<key>Size</key>
-								<integer>380062</integer>
+								<integer>380074</integer>
+							</dict>
+							<key>files/stacks-image-9268316-250x303.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Ep/9fYVA4ZG7
+								A9Dh1qCO4g==
+								</data>
+								<key>Size</key>
+								<integer>99800</integer>
+							</dict>
+							<key>files/stacks-image-92e3075-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								c1UCR/sFBLCH
+								zn5n5UJwOA==
+								</data>
+								<key>Size</key>
+								<integer>114477</integer>
+							</dict>
+							<key>files/stacks-image-92e3075-250x250@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								hUfRkkISOpi4
+								M81sAcHQ1g==
+								</data>
+								<key>Size</key>
+								<integer>402239</integer>
 							</dict>
 							<key>files/stacks-image-a3e2147-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								GyXo75SWuN6C
-								35TW9swtZQ==
+								zgqZvEALTUts
+								d6df1U3bjQ==
 								</data>
 								<key>Size</key>
-								<integer>115786</integer>
+								<integer>115798</integer>
 							</dict>
 							<key>files/stacks-image-a4d3338-1198x798.jpg</key>
 							<dict>
@@ -234,91 +274,121 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								k+Uo+zE3itOO
-								CHBXkFtOFw==
+								2a33aPMuWlIG
+								4xQanQANSQ==
 								</data>
 								<key>Size</key>
-								<integer>100229</integer>
+								<integer>100241</integer>
 							</dict>
 							<key>files/stacks-image-bcdb310-250x261@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								/1jem4WrVx26
-								xtJNIaY4lw==
+								qznoTS82TEfe
+								ArlUZYiftA==
 								</data>
 								<key>Size</key>
-								<integer>354251</integer>
+								<integer>354263</integer>
+							</dict>
+							<key>files/stacks-image-bcdb310-250x264.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								aAhKilfmY8y9
+								99tUn/0ElQ==
+								</data>
+								<key>Size</key>
+								<integer>101534</integer>
+							</dict>
+							<key>files/stacks-image-bcdb310-250x264@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								CWim7WXJ/Bma
+								BoeCPBY+TQ==
+								</data>
+								<key>Size</key>
+								<integer>354377</integer>
 							</dict>
 							<key>files/stacks-image-c381c2a-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								bv5OwqKC+5w5
-								53U8zR+YXQ==
+								bZp1B1xTcikI
+								WCPQd9oHJw==
 								</data>
 								<key>Size</key>
-								<integer>118399</integer>
+								<integer>118411</integer>
 							</dict>
 							<key>files/stacks-image-c381c2a-250x250@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								M1QVEW3lxLlU
-								yVZnMfW90Q==
+								M8zMJ8Y240mZ
+								qx5QoawjFg==
 								</data>
 								<key>Size</key>
-								<integer>398709</integer>
+								<integer>398721</integer>
 							</dict>
 							<key>files/stacks-image-e5aa8ea-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								2p2P/KNkglOV
-								GKG9dXELYA==
+								nNZ0CqQGihyE
+								0J726E/Mag==
 								</data>
 								<key>Size</key>
-								<integer>91673</integer>
+								<integer>91685</integer>
 							</dict>
 							<key>files/stacks-image-e9cecfd-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								3AhObzr2/ZGz
-								O3RZyyk5+A==
+								1IAccNlOf0pC
+								89E2KVVo0g==
 								</data>
 								<key>Size</key>
-								<integer>92073</integer>
+								<integer>92085</integer>
+							</dict>
+							<key>files/stacks-image-f0a1e8a-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Th4ZQ3m162Hz
+								RpEAXGMHWw==
+								</data>
+								<key>Size</key>
+								<integer>90979</integer>
 							</dict>
 							<key>files/stacks_page_page34.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								vKXULQQmlG7N
-								g8dREMMQ3g==
+								eAnAvns6T99N
+								nzS5SqqRwg==
 								</data>
 								<key>Size</key>
-								<integer>137482</integer>
+								<integer>176838</integer>
 							</dict>
 							<key>files/stacks_page_page34.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Z/V2CL41cBCn
-								cCaLg21+DQ==
+								8Kpa9+YbWi7b
+								OWqMGcasNg==
 								</data>
 								<key>Size</key>
-								<integer>24349</integer>
+								<integer>26351</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								JEw+ftZqInH/
-								tNAWqGnsNg==
+								8p46IJfc+FQm
+								spogeJ0vCg==
 								</data>
 								<key>Size</key>
-								<integer>71563</integer>
+								<integer>114725</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
