--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,20 +33,30 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-17T19:16:25Z</date>
+						<date>2018-07-18T00:34:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110527.jpg</key>
+							<key>files/backgroundImage_110557.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								uSoquum6mCty
-								uIn2fhh+hw==
+								syd5ScMzK+Md
+								76SbQPb+5w==
 								</data>
 								<key>Size</key>
-								<integer>571092</integer>
+								<integer>438998</integer>
+							</dict>
+							<key>files/pin.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								xcy6OK5dO/8V
+								xnwWql1CCA==
+								</data>
+								<key>Size</key>
+								<integer>3950</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -67,6 +77,56 @@
 								</data>
 								<key>Size</key>
 								<integer>68548</integer>
+							</dict>
+							<key>files/stacks-image-049024f-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								c1UCR/sFBLCH
+								zn5n5UJwOA==
+								</data>
+								<key>Size</key>
+								<integer>114477</integer>
+							</dict>
+							<key>files/stacks-image-049024f-250x250@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								hUfRkkISOpi4
+								M81sAcHQ1g==
+								</data>
+								<key>Size</key>
+								<integer>402239</integer>
+							</dict>
+							<key>files/stacks-image-062a04b-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								eQ9Rh52FGIe7
+								UYosePi0aA==
+								</data>
+								<key>Size</key>
+								<integer>89870</integer>
+							</dict>
+							<key>files/stacks-image-062a04b-250x250@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								2B7IB/yHoOnv
+								HElNONFqwA==
+								</data>
+								<key>Size</key>
+								<integer>329420</integer>
+							</dict>
+							<key>files/stacks-image-2058ce3-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ZRC2NrSeL/9y
+								yjtAupB0iA==
+								</data>
+								<key>Size</key>
+								<integer>47260</integer>
 							</dict>
 							<key>files/stacks-image-2db60e9-98x98.jpg</key>
 							<dict>
@@ -92,91 +152,101 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GyXo75SWuN6C
-								35TW9swtZQ==
+								zgqZvEALTUts
+								d6df1U3bjQ==
 								</data>
 								<key>Size</key>
-								<integer>115786</integer>
+								<integer>115798</integer>
 							</dict>
 							<key>files/stacks-image-48ee80b-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								t4zMg+i7qJ90
-								XBx6uNzwKw==
+								7K6PSQh9mROR
+								+7K5Nsj+3w==
 								</data>
 								<key>Size</key>
-								<integer>90786</integer>
+								<integer>90798</integer>
 							</dict>
 							<key>files/stacks-image-48ee80b-250x250@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								PtAxOimLl9Lo
-								lMvCRh8y6Q==
+								6zdIUUehofVi
+								nwpnAVNoCw==
 								</data>
 								<key>Size</key>
-								<integer>338276</integer>
+								<integer>338288</integer>
 							</dict>
 							<key>files/stacks-image-4df56e4-296x300.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								HBR/kcouY7Kf
-								dNpwYWNsnw==
+								ulRvSuax0xFi
+								j1R3/SUVbQ==
 								</data>
 								<key>Size</key>
-								<integer>83780</integer>
+								<integer>83792</integer>
+							</dict>
+							<key>files/stacks-image-555e842-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Th4ZQ3m162Hz
+								RpEAXGMHWw==
+								</data>
+								<key>Size</key>
+								<integer>90979</integer>
 							</dict>
 							<key>files/stacks-image-678f5ae-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								HgL7rxRYpTRx
-								LQ70BB3uaw==
+								ljioPaWktQOn
+								OPDlAmg++Q==
 								</data>
 								<key>Size</key>
-								<integer>81050</integer>
+								<integer>81062</integer>
 							</dict>
 							<key>files/stacks-image-6accef7-150x150.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								dOnpRa1sC7oP
-								tpMA1dWfIg==
+								zQ3j5jKmuA/V
+								ClPgdCi34g==
 								</data>
 								<key>Size</key>
-								<integer>20192</integer>
+								<integer>20204</integer>
 							</dict>
 							<key>files/stacks-image-6accef7-150x150@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								U3ErkD2T95mG
-								E8hAgPJO6w==
+								xDB+Q1jIIwjJ
+								DQuNfSyDBA==
 								</data>
 								<key>Size</key>
-								<integer>64755</integer>
+								<integer>64767</integer>
 							</dict>
 							<key>files/stacks-image-7ceb613-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								nRvrXeYGj4no
-								rrMDLqCP1A==
+								+tv/HsN8D/Dd
+								+mwdKel4Zg==
 								</data>
 								<key>Size</key>
-								<integer>107536</integer>
+								<integer>107548</integer>
 							</dict>
 							<key>files/stacks-image-7ceb613-250x250@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								KWIcBUtHwjvJ
-								Ze24pI995A==
+								KXvmS9DAvlAp
+								SxELDYlXxQ==
 								</data>
 								<key>Size</key>
-								<integer>380062</integer>
+								<integer>380074</integer>
 							</dict>
 							<key>files/stacks-image-810c5f5-98x98.jpg</key>
 							<dict>
@@ -202,41 +272,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VM6Y0Ntqxx4b
-								8oaTiaV9jA==
+								Ep/9fYVA4ZG7
+								A9Dh1qCO4g==
 								</data>
 								<key>Size</key>
-								<integer>99788</integer>
+								<integer>99800</integer>
 							</dict>
 							<key>files/stacks-image-92e3075-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								TJTIteeVpu8B
-								kDgQSw7Qbg==
+								c1UCR/sFBLCH
+								zn5n5UJwOA==
 								</data>
 								<key>Size</key>
-								<integer>114465</integer>
+								<integer>114477</integer>
 							</dict>
 							<key>files/stacks-image-92e3075-250x250@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								7P1z1BEnSg7o
-								iWPhqpOwrA==
+								hUfRkkISOpi4
+								M81sAcHQ1g==
 								</data>
 								<key>Size</key>
-								<integer>402227</integer>
-							</dict>
-							<key>files/stacks-image-9e3cec5-98x150.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								puf8IgV3ZVSP
-								HN7YynCLTg==
-								</data>
-								<key>Size</key>
-								<integer>12535</integer>
+								<integer>402239</integer>
 							</dict>
 							<key>files/stacks-image-9fc72ff-98x98.jpg</key>
 							<dict>
@@ -258,6 +318,16 @@
 								<key>Size</key>
 								<integer>7818</integer>
 							</dict>
+							<key>files/stacks-image-a3e2147-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								zgqZvEALTUts
+								d6df1U3bjQ==
+								</data>
+								<key>Size</key>
+								<integer>115798</integer>
+							</dict>
 							<key>files/stacks-image-a4d3338-1198x798.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -268,115 +338,145 @@
 								<key>Size</key>
 								<integer>553274</integer>
 							</dict>
+							<key>files/stacks-image-bcdb310-250x261.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								2a33aPMuWlIG
+								4xQanQANSQ==
+								</data>
+								<key>Size</key>
+								<integer>100241</integer>
+							</dict>
+							<key>files/stacks-image-bcdb310-250x261@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								qznoTS82TEfe
+								ArlUZYiftA==
+								</data>
+								<key>Size</key>
+								<integer>354263</integer>
+							</dict>
 							<key>files/stacks-image-bcdb310-250x264.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								mTPEHnzwHwCj
-								/rNMa9rE8w==
+								aAhKilfmY8y9
+								99tUn/0ElQ==
 								</data>
 								<key>Size</key>
-								<integer>101522</integer>
+								<integer>101534</integer>
 							</dict>
 							<key>files/stacks-image-bcdb310-250x264@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								okKanFx0BIx8
-								makGujAxDQ==
+								CWim7WXJ/Bma
+								BoeCPBY+TQ==
 								</data>
 								<key>Size</key>
-								<integer>354365</integer>
+								<integer>354377</integer>
 							</dict>
 							<key>files/stacks-image-c381c2a-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								bv5OwqKC+5w5
-								53U8zR+YXQ==
+								bZp1B1xTcikI
+								WCPQd9oHJw==
 								</data>
 								<key>Size</key>
-								<integer>118399</integer>
+								<integer>118411</integer>
 							</dict>
 							<key>files/stacks-image-c381c2a-250x250@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								M1QVEW3lxLlU
-								yVZnMfW90Q==
+								M8zMJ8Y240mZ
+								qx5QoawjFg==
 								</data>
 								<key>Size</key>
-								<integer>398709</integer>
+								<integer>398721</integer>
 							</dict>
 							<key>files/stacks-image-e5aa8ea-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								2p2P/KNkglOV
-								GKG9dXELYA==
+								nNZ0CqQGihyE
+								0J726E/Mag==
 								</data>
 								<key>Size</key>
-								<integer>91673</integer>
+								<integer>91685</integer>
 							</dict>
 							<key>files/stacks-image-e9cecfd-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								3AhObzr2/ZGz
-								O3RZyyk5+A==
+								1IAccNlOf0pC
+								89E2KVVo0g==
 								</data>
 								<key>Size</key>
-								<integer>92073</integer>
+								<integer>92085</integer>
 							</dict>
 							<key>files/stacks-image-f0a1e8a-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								FKOUMiwFTxo4
-								ULh95Iwdiw==
+								Th4ZQ3m162Hz
+								RpEAXGMHWw==
 								</data>
 								<key>Size</key>
-								<integer>90967</integer>
+								<integer>90979</integer>
 							</dict>
 							<key>files/stacks-image-faf7292-250x374.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								dsVM/TdGt3v6
-								h0Y0rzhpxw==
+								NNBt6Bo0YD+W
+								OAAFcd+YGA==
 								</data>
 								<key>Size</key>
-								<integer>97437</integer>
+								<integer>97449</integer>
 							</dict>
 							<key>files/stacks_page_page46.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								lPjYmXGa4Irp
-								6Ntkipx3xQ==
+								dSP47ITRQuXY
+								d32thYVLHg==
 								</data>
 								<key>Size</key>
-								<integer>155615</integer>
+								<integer>186168</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								McjjVV1WXVx4
-								CSux8RyVHg==
+								m3WqDDaZxYVm
+								pkTurZTtkA==
 								</data>
 								<key>Size</key>
-								<integer>24349</integer>
+								<integer>30157</integer>
+							</dict>
+							<key>files/stacks_page_page46.php</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								hqceX0Euwn0e
+								stcVNbl0FA==
+								</data>
+								<key>Size</key>
+								<integer>922</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Lo2uY0oaAnjo
-								CiWZWEwjpA==
+								YKJA0Hya+gnj
+								n9qyAwwNXw==
 								</data>
 								<key>Size</key>
-								<integer>118189</integer>
+								<integer>147415</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
