--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-17T19:16:25Z</date>
+						<date>2018-07-18T00:28:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,121 +82,151 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9aG8gi8hGPTM
-								nB1cDOh5dg==
+								qAh+qbptlqDh
+								13HUcV/6Og==
 								</data>
 								<key>Size</key>
-								<integer>103123</integer>
+								<integer>103135</integer>
 							</dict>
 							<key>files/stacks-image-1aebfb5-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Y4lgVTf8Gkkk
-								8EHuVP0Cmw==
+								Er/+pE7hNNIn
+								W7FQzXekEQ==
 								</data>
 								<key>Size</key>
-								<integer>94687</integer>
+								<integer>94699</integer>
 							</dict>
 							<key>files/stacks-image-1aebfb5-250x250@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								L89c/ljUrVh4
-								r2rgzOjFhw==
+								5xACEUvkvEwz
+								VJnG6F3YxQ==
 								</data>
 								<key>Size</key>
-								<integer>337046</integer>
+								<integer>337058</integer>
 							</dict>
 							<key>files/stacks-image-1b7cfd7-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								V3IbWWl3JOsc
-								xD+1ev9Ukg==
+								6850vL6xR3zu
+								I585rDTQ9A==
 								</data>
 								<key>Size</key>
-								<integer>83784</integer>
+								<integer>83796</integer>
 							</dict>
 							<key>files/stacks-image-1cd049f-250x256.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								KYjWU4n4Fd2k
-								AoJaQWoioQ==
+								jDouJEb5UOgP
+								r0dDWJlwxQ==
 								</data>
 								<key>Size</key>
-								<integer>105918</integer>
+								<integer>105930</integer>
+							</dict>
+							<key>files/stacks-image-22d1215-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								6850vL6xR3zu
+								I585rDTQ9A==
+								</data>
+								<key>Size</key>
+								<integer>83796</integer>
 							</dict>
 							<key>files/stacks-image-4935364-261x251.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								h86nWD8isiw4
-								5W/HSehlMw==
+								pUhB5Fqnu3YS
+								YA9dT+6AqA==
 								</data>
 								<key>Size</key>
-								<integer>126599</integer>
+								<integer>126611</integer>
 							</dict>
 							<key>files/stacks-image-4935364-261x251@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								5MNxG52rxo47
-								fAl1teNWPQ==
+								qhWr5oOEZqif
+								DGH4sagTCw==
 								</data>
 								<key>Size</key>
-								<integer>462096</integer>
+								<integer>462108</integer>
 							</dict>
 							<key>files/stacks-image-8364b1f-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								VTNuN612V1GJ
-								qoz67hsz/w==
+								54Pi3j6G6/2E
+								lZMvrz7LCQ==
 								</data>
 								<key>Size</key>
-								<integer>82422</integer>
+								<integer>82434</integer>
 							</dict>
 							<key>files/stacks-image-8364b1f-250x250@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Gx8aA3FxM3FU
-								IW8ctwO33w==
+								jkc9i4T4u9l6
+								TAQpPAe0oA==
 								</data>
 								<key>Size</key>
-								<integer>279039</integer>
+								<integer>279051</integer>
 							</dict>
 							<key>files/stacks-image-8387376-251x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								StqOH6zEEUdP
-								VL/bvqqV8Q==
+								uLnjrAb6/rb2
+								PvK474baVg==
 								</data>
 								<key>Size</key>
-								<integer>93122</integer>
+								<integer>93134</integer>
 							</dict>
 							<key>files/stacks-image-8387376-251x250@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								pD8TK0t2dUel
-								KlBmsLmHBw==
+								3ZabeVPvd9Kl
+								twBcUWNgPQ==
 								</data>
 								<key>Size</key>
-								<integer>330995</integer>
+								<integer>331007</integer>
+							</dict>
+							<key>files/stacks-image-9268316-254x307.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								OWHKVNVR8avk
+								Gw89ZYMSgA==
+								</data>
+								<key>Size</key>
+								<integer>102415</integer>
+							</dict>
+							<key>files/stacks-image-95b64f0-259x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								koUbxWdIBl3I
+								hyTmClYd4A==
+								</data>
+								<key>Size</key>
+								<integer>108726</integer>
 							</dict>
 							<key>files/stacks-image-9e3cec5-98x150.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								puf8IgV3ZVSP
-								HN7YynCLTg==
+								SdC49IhJ3JHE
+								zutzsmftPQ==
 								</data>
 								<key>Size</key>
-								<integer>12535</integer>
+								<integer>12547</integer>
 							</dict>
 							<key>files/stacks-image-a4d3338-1198x798.jpg</key>
 							<dict>
@@ -212,81 +242,111 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wFkMRy2/WKvo
-								H9dKvYDhIw==
+								X4LIM0pJmROb
+								OoK7OiXgTw==
 								</data>
 								<key>Size</key>
-								<integer>103543</integer>
+								<integer>103555</integer>
 							</dict>
 							<key>files/stacks-image-bcdb310-250x256.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZzwnqfzXdsdD
-								1OMOi3dEmw==
+								JQq/tMG5yWnX
+								mrXC2R4Oig==
 								</data>
 								<key>Size</key>
-								<integer>101333</integer>
+								<integer>101345</integer>
 							</dict>
 							<key>files/stacks-image-bcdb310-250x256@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								SnK7vvGKXBKF
-								8ikV9exfsA==
+								BBFEAKWPfxhN
+								YCQVK2+Czg==
 								</data>
 								<key>Size</key>
-								<integer>353778</integer>
+								<integer>353790</integer>
+							</dict>
+							<key>files/stacks-image-bcdb310-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								kIzXf5nC37dU
+								ED0RuUkYDQ==
+								</data>
+								<key>Size</key>
+								<integer>101485</integer>
+							</dict>
+							<key>files/stacks-image-bcdb310-250x260@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Y9RpQKxhcjiN
+								udjjwCufbQ==
+								</data>
+								<key>Size</key>
+								<integer>354232</integer>
 							</dict>
 							<key>files/stacks-image-c9f8f3e-300x168.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								F3PQkz9HIAuZ
-								nYpHa8bgcg==
+								tPrKTkeRLB3f
+								sDvisoqn9A==
 								</data>
 								<key>Size</key>
-								<integer>36638</integer>
+								<integer>36650</integer>
+							</dict>
+							<key>files/stacks-image-fedaa0e-259x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								1sfNyWCKk+No
+								N6Tc6an/Wg==
+								</data>
+								<key>Size</key>
+								<integer>105876</integer>
 							</dict>
 							<key>files/stacks-image-fedaa0e-261x251.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ri/OBDs3i2iv
-								O7tScwBwlw==
+								Qx3usBTZaMMY
+								7hat0ECS2w==
 								</data>
 								<key>Size</key>
-								<integer>106090</integer>
+								<integer>106102</integer>
 							</dict>
 							<key>files/stacks_page_page35.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								eOOgryoKKKyn
-								q7WUY1w3Fw==
+								JG9VhatMH6+x
+								5x9dVjEVxw==
 								</data>
 								<key>Size</key>
-								<integer>131841</integer>
+								<integer>168078</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								9wa+W638e59k
-								Vrw2OMxuoA==
+								O8yHpfhU6FUe
+								VxJuFOgoPA==
 								</data>
 								<key>Size</key>
-								<integer>24349</integer>
+								<integer>26169</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								sXDKcAEFl9BI
-								YUn1cltMlw==
+								QKy+Hcbyi1l0
+								+TtH3vLGDw==
 								</data>
 								<key>Size</key>
-								<integer>66634</integer>
+								<integer>107117</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
