--- a/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/4-Press-/PageAttributes/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/4-Press-/PageAttributes/Contents.plist
@@ -48,7 +48,7 @@ margin-bottom:1rem;
 				<key>FilenameExtension</key>
 				<string>html</string>
 				<key>FolderName</key>
-				<string>core-team</string>
+				<string>press</string>
 				<key>HasCustomThemeStyle</key>
 				<false/>
 				<key>Hidden</key>
