--- a/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/2-Publications/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/2-Publications/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-18T14:54:58Z</date>
+						<date>2018-07-18T17:44:07Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -292,11 +292,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								IweOTB5cB+5/
-								kFmruPwnrQ==
+								hQ5JA2pxzxuJ
+								lKWulqHB0A==
 								</data>
 								<key>Size</key>
-								<integer>51994</integer>
+								<integer>52234</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
