--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -5378,7 +5378,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-18T14:54:58Z</date>
+						<date>2018-07-19T13:26:43Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5437,111 +5437,111 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								PuhV1N2hKIgZ
-								hme9LBK+9w==
+								U8fXe2mIAwWX
+								hw+GczBpSg==
 								</data>
 								<key>Size</key>
-								<integer>97104</integer>
+								<integer>97116</integer>
 							</dict>
 							<key>files/stacks-image-10532b8-250x260@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								AQR0jRyP1OuW
-								/qcR2L8sLw==
+								8WCcaPD7Laqf
+								FSKjvdKBnQ==
 								</data>
 								<key>Size</key>
-								<integer>319847</integer>
+								<integer>319859</integer>
 							</dict>
 							<key>files/stacks-image-17fd2ba-250x260.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								WFiXR68UpxtT
-								SWeYJpTv4A==
+								N0khg3CNZLPo
+								Gy4lYWwyhQ==
 								</data>
 								<key>Size</key>
-								<integer>87953</integer>
+								<integer>87965</integer>
 							</dict>
 							<key>files/stacks-image-17fd2ba-250x260@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								5PyCN18CMqi8
-								E09bH60EFA==
+								Os8gTdkxTsH7
+								wsVCDx+aDw==
 								</data>
 								<key>Size</key>
-								<integer>319385</integer>
+								<integer>319397</integer>
 							</dict>
 							<key>files/stacks-image-1aebfb5-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Y4lgVTf8Gkkk
-								8EHuVP0Cmw==
+								Er/+pE7hNNIn
+								W7FQzXekEQ==
 								</data>
 								<key>Size</key>
-								<integer>94687</integer>
+								<integer>94699</integer>
 							</dict>
 							<key>files/stacks-image-1aebfb5-250x250@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								L89c/ljUrVh4
-								r2rgzOjFhw==
+								5xACEUvkvEwz
+								VJnG6F3YxQ==
 								</data>
 								<key>Size</key>
-								<integer>337046</integer>
+								<integer>337058</integer>
 							</dict>
 							<key>files/stacks-image-1e491bc-300x256.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								4frb7XCfD24E
-								t3XBPwbhTA==
+								/+gUVNDoUa72
+								sq7BV9NzCQ==
 								</data>
 								<key>Size</key>
-								<integer>68333</integer>
+								<integer>68345</integer>
 							</dict>
 							<key>files/stacks-image-1e491bc-300x256@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								pB3HD08J82L0
-								6W0bAawXDA==
+								erVlCbjiU39h
+								v10x8sPHoA==
 								</data>
 								<key>Size</key>
-								<integer>221992</integer>
+								<integer>222004</integer>
 							</dict>
 							<key>files/stacks-image-24a754b-250x254.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								kBbEZrWsGn0u
-								l36jBOx4qQ==
+								vVeZyTy9ktpw
+								4c/asRc/Xg==
 								</data>
 								<key>Size</key>
-								<integer>86992</integer>
+								<integer>87004</integer>
 							</dict>
 							<key>files/stacks-image-25ae135-250x260.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								NcCHMM6opzO2
-								Kc24ThzSBw==
+								HmvZZAhJxjQg
+								NXNd+h4fSg==
 								</data>
 								<key>Size</key>
-								<integer>110187</integer>
+								<integer>110199</integer>
 							</dict>
 							<key>files/stacks-image-25ae135-250x260@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								D030ruNUqPQP
-								1Aq0QOXx8A==
+								AYe3rBztL3rf
+								zgqqfTP94Q==
 								</data>
 								<key>Size</key>
-								<integer>379393</integer>
+								<integer>379405</integer>
 							</dict>
 							<key>files/stacks-image-2d02c4e-1200x284.jpg</key>
 							<dict>
@@ -5567,91 +5567,91 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								n9a4GLsTZV+2
-								+/A+X8dCLw==
+								jdOwxthDYAgR
+								Be0ngDdx0g==
 								</data>
 								<key>Size</key>
-								<integer>18713</integer>
+								<integer>18725</integer>
 							</dict>
 							<key>files/stacks-image-3dfae34-300x218@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								RIfZHfXIf8+3
-								kANM+gtXIA==
+								yF5XMAWDgg4Q
+								6tTSb2qY3A==
 								</data>
 								<key>Size</key>
-								<integer>41815</integer>
+								<integer>41827</integer>
 							</dict>
 							<key>files/stacks-image-45fda98-250x260.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								UPkHo2GmQA9S
-								nRnN5AC22g==
+								YcuiUOp4a+di
+								PJUgW9ZScA==
 								</data>
 								<key>Size</key>
-								<integer>105690</integer>
+								<integer>105702</integer>
 							</dict>
 							<key>files/stacks-image-45fda98-250x260@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								dAHNXNKMUW+w
-								ai4WeucNqA==
+								QJcyiiGLSzuD
+								67ZodTbr1g==
 								</data>
 								<key>Size</key>
-								<integer>402040</integer>
+								<integer>402052</integer>
 							</dict>
 							<key>files/stacks-image-48ee80b-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								t4zMg+i7qJ90
-								XBx6uNzwKw==
+								7K6PSQh9mROR
+								+7K5Nsj+3w==
 								</data>
 								<key>Size</key>
-								<integer>90786</integer>
+								<integer>90798</integer>
 							</dict>
 							<key>files/stacks-image-48ee80b-250x250@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								PtAxOimLl9Lo
-								lMvCRh8y6Q==
+								6zdIUUehofVi
+								nwpnAVNoCw==
 								</data>
 								<key>Size</key>
-								<integer>338276</integer>
+								<integer>338288</integer>
 							</dict>
 							<key>files/stacks-image-4d44245-250x260.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								P0k4dvYWss+s
-								A43wfbtuUA==
+								+vdMEyY2Nma2
+								i47OSlhwZA==
 								</data>
 								<key>Size</key>
-								<integer>67237</integer>
+								<integer>67249</integer>
 							</dict>
 							<key>files/stacks-image-55f5c6b-298x58.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								cPC/mgkDu6UM
-								vqsPmR3ecQ==
+								Zi5S7JDhTkJD
+								7VUl6uQUMA==
 								</data>
 								<key>Size</key>
-								<integer>15084</integer>
+								<integer>15096</integer>
 							</dict>
 							<key>files/stacks-image-5e1ff49-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								FiGKFB9TiP2q
-								bAW0RSbqDA==
+								d/12RsCKoVv4
+								r9+0ESaqAg==
 								</data>
 								<key>Size</key>
-								<integer>78959</integer>
+								<integer>78971</integer>
 							</dict>
 							<key>files/stacks-image-6a176f2.jpg</key>
 							<dict>
@@ -5667,11 +5667,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tbIPBQXJbF7c
-								IWa5/Iv3mw==
+								wxt8EJvqjpqY
+								mD8BZ/M6FQ==
 								</data>
 								<key>Size</key>
-								<integer>75264</integer>
+								<integer>75276</integer>
 							</dict>
 							<key>files/stacks-image-a63dce2-1200x796.jpg</key>
 							<dict>
@@ -5697,21 +5697,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								C3kyqHbDXSkW
-								b0WbC+z9lg==
+								kIzXf5nC37dU
+								ED0RuUkYDQ==
 								</data>
 								<key>Size</key>
-								<integer>101473</integer>
+								<integer>101485</integer>
 							</dict>
 							<key>files/stacks-image-bcdb310-250x260@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								6F7wC5wlt+mG
-								L9Fb1aUjiA==
+								Y9RpQKxhcjiN
+								udjjwCufbQ==
 								</data>
 								<key>Size</key>
-								<integer>354220</integer>
+								<integer>354232</integer>
 							</dict>
 							<key>files/stacks-image-cfb5234-98x98.jpg</key>
 							<dict>
@@ -5737,11 +5737,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								lOr1949+Yath
-								mMivYFHMvw==
+								Gt6fhKisPy1D
+								I0SvPrdIeQ==
 								</data>
 								<key>Size</key>
-								<integer>125056</integer>
+								<integer>125068</integer>
 							</dict>
 							<key>files/stacks-image-e712d99-98x98.jpg</key>
 							<dict>
@@ -5767,51 +5767,51 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GDF7o5f2Ijq1
-								Itm/KyFa5Q==
+								BOLf/keU4lon
+								gRAFjgtFfg==
 								</data>
 								<key>Size</key>
-								<integer>67518</integer>
+								<integer>67530</integer>
 							</dict>
 							<key>files/stacks-image-f38d32b-450x386@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								HZi0m2wWckJS
-								0GfGLjPrEw==
+								BKnt+BMFzYt0
+								6aH1mFPVbA==
 								</data>
 								<key>Size</key>
-								<integer>196380</integer>
+								<integer>196392</integer>
 							</dict>
 							<key>files/stacks-image-faf7292-250x374.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								dsVM/TdGt3v6
-								h0Y0rzhpxw==
+								NNBt6Bo0YD+W
+								OAAFcd+YGA==
 								</data>
 								<key>Size</key>
-								<integer>97437</integer>
+								<integer>97449</integer>
 							</dict>
 							<key>files/stacks-image-fecc660-98x150.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								puf8IgV3ZVSP
-								HN7YynCLTg==
+								SdC49IhJ3JHE
+								zutzsmftPQ==
 								</data>
 								<key>Size</key>
-								<integer>12535</integer>
+								<integer>12547</integer>
 							</dict>
 							<key>files/stacks_page_page49.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								TpqbIJVbifYr
-								TIr7P/YsqQ==
+								0u34inBGjKuF
+								kNanwB+RPQ==
 								</data>
 								<key>Size</key>
-								<integer>159828</integer>
+								<integer>172498</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -5827,11 +5827,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								spMGDK3W4klh
-								aFBKSGQlkw==
+								IGXvsSlAUwe3
+								ATQhqE4y0g==
 								</data>
 								<key>Size</key>
-								<integer>108164</integer>
+								<integer>119335</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7960,7 +7960,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-18T20:36:35Z</date>
+						<date>2018-07-19T13:26:43Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8009,11 +8009,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								K/Wbr76jkN/k
-								0YOj2FvSmg==
+								RJTIt1rpvzF2
+								eNEURf6bZg==
 								</data>
 								<key>Size</key>
-								<integer>3818</integer>
+								<integer>3754</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8062,7 +8062,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-18T20:34:37Z</date>
+						<date>2018-07-19T13:26:43Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9101,11 +9101,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								uaxP1xgHc22w
-								1VnIIxBmvw==
+								McuHFJyxNDW8
+								m/BHdBj2vw==
 								</data>
 								<key>Size</key>
-								<integer>3734</integer>
+								<integer>3142</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9199,8 +9199,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcB/8Hna
-				kBWAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCAZIwr
+				fa+AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -9210,7 +9210,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcB/8HnakrSA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCAZIwrejWA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
