changed vanessas title
changed vanessas title

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -2996,7 +2996,7 @@
 					<key>page35 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-18T20:56:17Z</date>
+						<date>2018-07-19T13:58:01Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3305,11 +3305,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SYrVqaBVHv8y
-								5AqvLfNDYA==
+								4Zdbgf+IgPuv
+								3mZreyWueg==
 								</data>
 								<key>Size</key>
-								<integer>106923</integer>
+								<integer>106699</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4962,7 +4962,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-18T14:54:58Z</date>
+						<date>2018-07-19T13:58:01Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4976,6 +4976,16 @@
 								</data>
 								<key>Size</key>
 								<integer>91721</integer>
+							</dict>
+							<key>files/pin.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								xcy6OK5dO/8V
+								xnwWql1CCA==
+								</data>
+								<key>Size</key>
+								<integer>3950</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -5001,61 +5011,61 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9aG8gi8hGPTM
-								nB1cDOh5dg==
+								qAh+qbptlqDh
+								13HUcV/6Og==
 								</data>
 								<key>Size</key>
-								<integer>103123</integer>
+								<integer>103135</integer>
 							</dict>
 							<key>files/stacks-image-1aebfb5-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Y4lgVTf8Gkkk
-								8EHuVP0Cmw==
+								Er/+pE7hNNIn
+								W7FQzXekEQ==
 								</data>
 								<key>Size</key>
-								<integer>94687</integer>
+								<integer>94699</integer>
 							</dict>
 							<key>files/stacks-image-1aebfb5-250x250@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								L89c/ljUrVh4
-								r2rgzOjFhw==
+								5xACEUvkvEwz
+								VJnG6F3YxQ==
 								</data>
 								<key>Size</key>
-								<integer>337046</integer>
+								<integer>337058</integer>
 							</dict>
 							<key>files/stacks-image-1b7cfd7-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								V3IbWWl3JOsc
-								xD+1ev9Ukg==
+								6850vL6xR3zu
+								I585rDTQ9A==
 								</data>
 								<key>Size</key>
-								<integer>83784</integer>
+								<integer>83796</integer>
 							</dict>
 							<key>files/stacks-image-1cd049f-250x256.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								KYjWU4n4Fd2k
-								AoJaQWoioQ==
+								jDouJEb5UOgP
+								r0dDWJlwxQ==
 								</data>
 								<key>Size</key>
-								<integer>105918</integer>
+								<integer>105930</integer>
 							</dict>
 							<key>files/stacks-image-22d1215-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								V3IbWWl3JOsc
-								xD+1ev9Ukg==
+								6850vL6xR3zu
+								I585rDTQ9A==
 								</data>
 								<key>Size</key>
-								<integer>83784</integer>
+								<integer>83796</integer>
 							</dict>
 							<key>files/stacks-image-3edeb52-98x98.jpg</key>
 							<dict>
@@ -5081,51 +5091,51 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								h86nWD8isiw4
-								5W/HSehlMw==
+								pUhB5Fqnu3YS
+								YA9dT+6AqA==
 								</data>
 								<key>Size</key>
-								<integer>126599</integer>
+								<integer>126611</integer>
 							</dict>
 							<key>files/stacks-image-4935364-261x251@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								5MNxG52rxo47
-								fAl1teNWPQ==
+								qhWr5oOEZqif
+								DGH4sagTCw==
 								</data>
 								<key>Size</key>
-								<integer>462096</integer>
+								<integer>462108</integer>
 							</dict>
 							<key>files/stacks-image-6accef7-150x150.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								dOnpRa1sC7oP
-								tpMA1dWfIg==
+								zQ3j5jKmuA/V
+								ClPgdCi34g==
 								</data>
 								<key>Size</key>
-								<integer>20192</integer>
+								<integer>20204</integer>
 							</dict>
 							<key>files/stacks-image-6accef7-150x150@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								U3ErkD2T95mG
-								E8hAgPJO6w==
+								xDB+Q1jIIwjJ
+								DQuNfSyDBA==
 								</data>
 								<key>Size</key>
-								<integer>64755</integer>
+								<integer>64767</integer>
 							</dict>
 							<key>files/stacks-image-73fdc2e-98x150.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								puf8IgV3ZVSP
-								HN7YynCLTg==
+								SdC49IhJ3JHE
+								zutzsmftPQ==
 								</data>
 								<key>Size</key>
-								<integer>12535</integer>
+								<integer>12547</integer>
 							</dict>
 							<key>files/stacks-image-810c5f5-98x98.jpg</key>
 							<dict>
@@ -5151,71 +5161,71 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VTNuN612V1GJ
-								qoz67hsz/w==
+								54Pi3j6G6/2E
+								lZMvrz7LCQ==
 								</data>
 								<key>Size</key>
-								<integer>82422</integer>
+								<integer>82434</integer>
 							</dict>
 							<key>files/stacks-image-8364b1f-250x250@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Gx8aA3FxM3FU
-								IW8ctwO33w==
+								jkc9i4T4u9l6
+								TAQpPAe0oA==
 								</data>
 								<key>Size</key>
-								<integer>279039</integer>
+								<integer>279051</integer>
 							</dict>
 							<key>files/stacks-image-8387376-251x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								StqOH6zEEUdP
-								VL/bvqqV8Q==
+								uLnjrAb6/rb2
+								PvK474baVg==
 								</data>
 								<key>Size</key>
-								<integer>93122</integer>
+								<integer>93134</integer>
 							</dict>
 							<key>files/stacks-image-8387376-251x250@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								pD8TK0t2dUel
-								KlBmsLmHBw==
+								3ZabeVPvd9Kl
+								twBcUWNgPQ==
 								</data>
 								<key>Size</key>
-								<integer>330995</integer>
+								<integer>331007</integer>
 							</dict>
 							<key>files/stacks-image-86b04b6-296x300.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								HBR/kcouY7Kf
-								dNpwYWNsnw==
+								ulRvSuax0xFi
+								j1R3/SUVbQ==
 								</data>
 								<key>Size</key>
-								<integer>83780</integer>
+								<integer>83792</integer>
 							</dict>
 							<key>files/stacks-image-9268316-254x307.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								GDhBV23tyrLp
-								dkQTCK5NIA==
+								OWHKVNVR8avk
+								Gw89ZYMSgA==
 								</data>
 								<key>Size</key>
-								<integer>102403</integer>
+								<integer>102415</integer>
 							</dict>
 							<key>files/stacks-image-95b64f0-259x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								lPxIqHNQbutL
-								tnX3WJLdBw==
+								koUbxWdIBl3I
+								hyTmClYd4A==
 								</data>
 								<key>Size</key>
-								<integer>108714</integer>
+								<integer>108726</integer>
 							</dict>
 							<key>files/stacks-image-a4d3338-974x648.jpg</key>
 							<dict>
@@ -5261,111 +5271,121 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wFkMRy2/WKvo
-								H9dKvYDhIw==
+								X4LIM0pJmROb
+								OoK7OiXgTw==
 								</data>
 								<key>Size</key>
-								<integer>103543</integer>
+								<integer>103555</integer>
 							</dict>
 							<key>files/stacks-image-bcdb310-250x256.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZzwnqfzXdsdD
-								1OMOi3dEmw==
+								JQq/tMG5yWnX
+								mrXC2R4Oig==
 								</data>
 								<key>Size</key>
-								<integer>101333</integer>
+								<integer>101345</integer>
 							</dict>
 							<key>files/stacks-image-bcdb310-250x256@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								SnK7vvGKXBKF
-								8ikV9exfsA==
+								BBFEAKWPfxhN
+								YCQVK2+Czg==
 								</data>
 								<key>Size</key>
-								<integer>353778</integer>
+								<integer>353790</integer>
 							</dict>
 							<key>files/stacks-image-bcdb310-250x260.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								C3kyqHbDXSkW
-								b0WbC+z9lg==
+								kIzXf5nC37dU
+								ED0RuUkYDQ==
 								</data>
 								<key>Size</key>
-								<integer>101473</integer>
+								<integer>101485</integer>
 							</dict>
 							<key>files/stacks-image-bcdb310-250x260@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								6F7wC5wlt+mG
-								L9Fb1aUjiA==
+								Y9RpQKxhcjiN
+								udjjwCufbQ==
 								</data>
 								<key>Size</key>
-								<integer>354220</integer>
+								<integer>354232</integer>
 							</dict>
 							<key>files/stacks-image-faf7292-250x374.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								dsVM/TdGt3v6
-								h0Y0rzhpxw==
+								NNBt6Bo0YD+W
+								OAAFcd+YGA==
 								</data>
 								<key>Size</key>
-								<integer>97437</integer>
+								<integer>97449</integer>
 							</dict>
 							<key>files/stacks-image-fedaa0e-259x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								EaMUSAnlrNRX
-								wiyc8Ef80Q==
+								1sfNyWCKk+No
+								N6Tc6an/Wg==
 								</data>
 								<key>Size</key>
-								<integer>105864</integer>
+								<integer>105876</integer>
 							</dict>
 							<key>files/stacks-image-fedaa0e-261x251.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ri/OBDs3i2iv
-								O7tScwBwlw==
+								Qx3usBTZaMMY
+								7hat0ECS2w==
 								</data>
 								<key>Size</key>
-								<integer>106090</integer>
+								<integer>106102</integer>
 							</dict>
 							<key>files/stacks_page_page48.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								gXWkiCImVQSm
-								gBo42XeONA==
+								BbohiXnELAfM
+								xvbIwDoItg==
 								</data>
 								<key>Size</key>
-								<integer>182064</integer>
+								<integer>182445</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								O1FbPQgzAjjB
-								daTGtiyN/w==
+								mRZ+xa8kAKpV
+								URUh/UmdCg==
 								</data>
 								<key>Size</key>
-								<integer>26533</integer>
+								<integer>30157</integer>
+							</dict>
+							<key>files/stacks_page_page48.php</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								asS6houAG3U0
+								vky2WZQZ8A==
+								</data>
+								<key>Size</key>
+								<integer>922</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								kjBaxpk69ndP
-								cyQZIHyIoQ==
+								Ka4MoRgayt0a
+								xj0ATNHXWA==
 								</data>
 								<key>Size</key>
-								<integer>133890</integer>
+								<integer>134162</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9199,8 +9219,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCAZIwr
-				fa+AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCAaDb/
+				qdKAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -9210,7 +9230,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCAZIwrejWA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCAaDb/rHmA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
