--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-18T20:56:17Z</date>
+						<date>2018-07-19T13:58:01Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -342,11 +342,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SYrVqaBVHv8y
-								5AqvLfNDYA==
+								4Zdbgf+IgPuv
+								3mZreyWueg==
 								</data>
 								<key>Size</key>
-								<integer>106923</integer>
+								<integer>106699</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
