changed margain issue on SOS
changed margain issue on SOS

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-19T13:58:01Z</date>
+						<date>2018-07-19T16:43:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -322,11 +322,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/a3Vfln6UTJL
-								ypW2rnEj2Q==
+								xFEsO6b9Q3B/
+								+kMhMxcvzQ==
 								</data>
 								<key>Size</key>
-								<integer>168015</integer>
+								<integer>168076</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
